tests/ui/comptime/not_callable.stderr
error: comptime fns can only be called at compile time
  --> $DIR/not_callable.rs:10:5
   |
LL |     foo();
   |     ^^^^^

error: comptime fns can only be called at compile time
  --> $DIR/not_callable.rs:15:5
   |
LL |     foo();
   |     ^^^^^

error: comptime fns can only be called at compile time
  --> $DIR/not_callable.rs:21:5
   |
LL |     foo();
   |     ^^^^^

error: aborting due to 3 previous errors

